// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/poetry/update updateDependency replaces existing value 1`] = `
"[tool.poetry]
name = \\"example 1\\"
version = \\"0.1.0\\"
description = \\"\\"
authors = [\\"John Doe <john.doe@gmail.com>\\"]

[tool.poetry.dependencies]
dep1_ = \\"0.0.0\\"
dep1 = \\"1.0.0\\"
dep2 = \\"^0.6.0\\"
dep3 = \\"^0.33.6\\"

[tool.poetry.extras]
extra_dep1 = \\"^0.8.3\\"
extra_dep2 = \\"^0.9.4\\"
extra_dep3 = \\"^0.4.0\\"

[tool.poetry.dev-dependencies]
dev_dep1 = \\"^3.0\\"
dev_dep2 = \\"Invalid version.\\""
`;

exports[`manager/poetry/update updateDependency replaces nested value 1`] = `
"[tool.poetry]
name = \\"example 2\\"
version = \\"0.1.0\\"
description = \\"\\"
authors = [\\"John Doe <john.doe@gmail.com>\\"]

[tool.poetry.dependencies]
dep1 = { version =  \\"1.0.0\\" }
dep2 = { version = \\"^0.6.0\\" }
dep3 = { path = \\"/some/path/\\", version = '^0.33.6' }
dep4 = { path = \\"/some/path/\\" }

[tool.poetry.extras]
extra_dep1 = \\"^0.8.3\\"
extra_dep2 = \\"^0.9.4\\"
extra_dep3 = '^0.4.0'
"
`;

exports[`manager/poetry/update updateDependency replaces nested value for path dependency 1`] = `
"[tool.poetry]
name = \\"example 2\\"
version = \\"0.1.0\\"
description = \\"\\"
authors = [\\"John Doe <john.doe@gmail.com>\\"]

[tool.poetry.dependencies]
dep1 = { version =  \\"*\\" }
dep2 = { version = \\"^0.6.0\\" }
dep3 = { path = \\"/some/path/\\", version = \\"1.0.0\\" }
dep4 = { path = \\"/some/path/\\" }

[tool.poetry.extras]
extra_dep1 = \\"^0.8.3\\"
extra_dep2 = \\"^0.9.4\\"
extra_dep3 = '^0.4.0'
"
`;

exports[`manager/poetry/update updateDependency upgrades dev-dependencies 1`] = `
"[tool.poetry]
name = \\"example 1\\"
version = \\"0.1.0\\"
description = \\"\\"
authors = [\\"John Doe <john.doe@gmail.com>\\"]

[tool.poetry.dependencies]
dep1_ = \\"0.0.0\\"
dep1 = \\"0.0.0\\"
dep2 = \\"^0.6.0\\"
dep3 = \\"^0.33.6\\"

[tool.poetry.extras]
extra_dep1 = \\"^0.8.3\\"
extra_dep2 = \\"^0.9.4\\"
extra_dep3 = \\"^0.4.0\\"

[tool.poetry.dev-dependencies]
dev_dep1 = \\"1.0.0\\"
dev_dep2 = \\"Invalid version.\\""
`;

exports[`manager/poetry/update updateDependency upgrades extras 1`] = `
"[tool.poetry]
name = \\"example 1\\"
version = \\"0.1.0\\"
description = \\"\\"
authors = [\\"John Doe <john.doe@gmail.com>\\"]

[tool.poetry.dependencies]
dep1_ = \\"0.0.0\\"
dep1 = \\"0.0.0\\"
dep2 = \\"^0.6.0\\"
dep3 = \\"^0.33.6\\"

[tool.poetry.extras]
extra_dep1 = \\"1.0.0\\"
extra_dep2 = \\"^0.9.4\\"
extra_dep3 = \\"^0.4.0\\"

[tool.poetry.dev-dependencies]
dev_dep1 = \\"^3.0\\"
dev_dep2 = \\"Invalid version.\\""
`;
